@@ -1,3 +1,5 @@
+* Remove lighter background on event
+
 Version 0.7.1 - 2020-04-18
 * Bug fixes (see mercurial logs for details)
 
